[package]
name = "crabby-merge"
version = "0.5.0"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/kesyog/crabby-merge"
repository = "https://github.com/kesyog/crabby-merge"
documentation = "https://github.com/kesyog/crabby-merge"
description = "A utility to poll open Bitbucket PR's and merge them based on a configurable trigger."
keywords = ["bitbucket"]
categories = ["command-line-utilities"]
exclude = [
  ".github",
  ".mdl_config.yml"
]

[features]
default = ["jenkins"]
jenkins = ["jenkins_api"]

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
anyhow = "1"
cfg-if = "1"
config = { version = "0.13", default-features = false, features = ["toml"] }
directories = "4"
dirs = "4"
futures = "0.3"
guard = "0.5"
jenkins_api = { version = "0.8", optional = true }
log = "0.4"
once_cell = "1"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros"] }
url = "2.2"

[dev-dependencies]
tempdir = "0.3"
